			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01aq: *********************************

IMP: (11/21/04, GVG) Orbit behavior replaced by 3 separate ones in 3D view. Better zoom and translation

************************* Version 8.01ap: *********************************

IMP: (11/18/04, GVG) Technology name in new Arc/Node tabs in preferences

IMP: (11/18/04, GVG) Allow to keep min sizes stored in preferences (not applying Technoloogy.setLayerMinWidth().
Send a warning with debugging option.

IMP: (11/18/04, GVG) DRC will ignore goodDRCDates if library was created with old JElectric version.

BUG: (11/18/04, GVG) Not removing goodDRCDate from cells that didn't pass DRC.
FIX: Collect the information and do it in SaveJob

BUG: (11/18/04, GVG) ChangeCell.contains() not detecting repeated elements.
FIX: Put back original code

BUG: (11/18/04, SMR) Cross-library copy doesn't sort cell names properly.
FIX: In "CrossLibCopy.showCells()", use "nameSameNumeric".

BUG: (11/18/04, DN) Port moved always reported for ports of transistors rotated to 45 degree.
FIX: ArcInst.stillInPort() tolerates distance to nearest grid point "0.01*sqrt(0.5)".

IMP/MAN: (11/18/04, DN) Menu entry "File|CheckAndRepairLibraries" is splitted to two:
  "File|CheckLibraries|Check" and "File|CheckLibraries|Repair".

BUG: (11/18/04, DN) CheckAndRepair may change database, but it isn't executed in the change thread.
FIX: Class CircuitChanges.CheckAndRepairJob.

BUG: (11/18/04, DN) Input.readLibrary calls "preventLoss" dialog from change thread.
FIX: Move it FileMenu to execute in GUI thread.

IMP: (11/18/04, DN) CheckAndRepair put messages to ErrorLogger.

IMP: (11/17/04, SMR) Mimic stitch is faster, and interactive mode lets you zoom/pan window.

BUG: (11/16/04, SMR) Cross-library copy does not update cell references properly.
FIX: In Cell.copyNodeProto() ignore existing cross-library references.
